# otusv2

./: .env.example  .eslintrc.yml  .gitignore  README.md  app.ts  jest.config.json  jest.config.ts  package-lock.json  package.json  server.ts  tsconfig.json
.github/workflows/: main.yml
api/: recaptcha.ts
app/: .eslintrc.yml  Cargo.toml  README.md  app.ts  package-lock.json  package.json
app/client/: package.json
app/lib/: index.js
app/native/: .gitignore  Cargo.toml  index.d.ts
app/native/src/: bindings.rs  crypto.rs  fs.rs  lib.rs  test.rs  vuln.rs
app/native/src/bindings/: js_helper.rs  system_watcher.rs
app/native/tests/file_contains/: forensics_1_correct  forensics_1_incorrect
app/src/: crypto.rs  main.rs
client/: .eslintrc.yml  package-lock.json  package.json
client/example/: challenge.yml  discord.yml
client/public/: index.html  manifest.json
client/src/: config.json  index.css  index.tsx
client/src/util/: requests.ts
config/: config.json.example  redis.ts  winston.ts
deploy/: app.js  package-lock.json  package.json
deploy/schemas/: Challenge.js  User.js
routes/: leaderboard.ts  leaderboards.ts  router.ts  util.ts
routes/challenge/: create.ts  createChallenge.ts  get.ts  index.ts  submit.ts
routes/user/: index.ts  login.ts  logout.ts  profile.ts  register.ts
routes/users/: index.ts  register.ts
schema/: challenge.ts
schema/challenge/: challenge.ts  createChallenge.ts  index.ts
schema/leaderboard/: index.ts
schema/user/: index.ts  login.ts  register.ts
tests/: util.ts
tests/integration/: auth.test.ts  user.test.ts
(+29 files in other folders)
