[package]
name = "otus_client"
version = "0.1.0"
authors = ["Sammy Hajhamid <pepsipu@protonmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "otus_client"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
rust-crypto = "0.2.36"
lazy_static = "1.4.0"
rand = "0.7.3"
hex = "0.4.2"
base64 = "0.12.3"